--- a/Text101/Assembly-CSharp.csproj
+++ b/Text101/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\AdventureGame.cs" />
+     <Compile Include="Assets\State.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>C:/Users/Wade/Desktop/Unity/Repos/Unity2D/Text101/Text101/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
